# logtie

./: .gitignore  README.md  pyproject.toml
examples/: 01_basic.py  02_formatting.py  03_colors.py  04_context.py  05_json_file.py  06_level_routing.py  07_asyncio.py  08_rotation.py
python/: pyproject.toml
python/examples/: 01_basic.py  02_formatting.py  03_colors.py  04_context.py  05_json_file.py  06_level_routing.py  07_asyncio.py  08_rotation.py
python/src/dev/: playground.py
python/src/logtie/log/: __init__.py  _config.py  _formatters.py
src/logtie/log/: _constants.py  _context.py
src/pystruments/: __init__.py
