[project]
name = "logtie"
version = "0.1.0"
description = "Lightweight, zero-dependency logging wrapper with structured output, context injection, and file rotation"
readme = "README.md"
authors = [
    { name = "beqm", email = "brenomartinsmb@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "project",
]
